# Good-Matrix

./: CMakeLists.txt  README.md  TODO.md
include/gms/: analyzer.hpp  banded.hpp  cg.hpp  csr.hpp  dense.hpp  gmres.hpp  ilu0.hpp  precond.hpp  router.hpp  solver.hpp  spmv.hpp  tridiag.hpp  utils.hpp
python/: example_solve.py
src/: $s  analyzer.cpp  banded.cpp  cg.cpp  csr.cpp  dense.cpp  gmres.cpp  ilu0.cpp  mixed_precision.cpp  precond.cpp  pybind_module.cpp  router.cpp  spmv.cpp  tridiag.cpp
tests/: test_analyzer.cpp  test_banded.cpp  test_dense.cpp  test_router.cpp  test_tridiag.cpp
